--- a/inlmn4/index.html
+++ b/inlmn4/index.html
@@ -18,10 +18,13 @@
             <input id="addBtn" type="button" value="Add"/>
         </form>
         <div id="listCont">
+            <h5>Sort By:</h5>
             <div id="sortCont">
                 <button class="sortBtns" id="sortName">Name</button>
                 <button class="sortBtns" id="sortAge">Age</button>
                 <button class="sortBtns" id="sortColor">Color</button>
+                <input id="itemsAmount" type="text" value="100" placeholder="Items Shown"/>
+                <h4>Items Shown</h4>
             </div>
             <h3>People</h3>
             <ul id="peopleList"></ul>
