--- a/inlmn6/index.html
+++ b/inlmn6/index.html
@@ -4,6 +4,7 @@
         <title>Document</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://use.fontawesome.com/e4978cdcf5.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://unpkg.com/react@15/dist/react.js"></script>
         <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
